spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-k8s-client-discovery/src/test/resources/kubernetes-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-client-discovery-it
  annotations:
    custom-spring-k8s: spring-k8s
  name: spring-cloud-kubernetes-client-discovery-it
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-client-discovery-it
  type: ClusterIP
